feat: create content

--- a/index.html
+++ b/index.html
@@ -25,6 +25,96 @@
         </div>
       </div>
 
+    <div class="main-inf">
+
+      <section>
+        <div class="section-title">
+          <h2>Education</h2>
+        </div>
+        <div class="section-content">
+          <p>Belarusian State University of Informatics and Radioelectronics</p>
+          <p>Artificial Intelligence</p>
+          <p>2015</p>
+        </div>
+        <div class="clear"></div>
+      </section>
+
+      <section>
+        <div class="section-title">
+          <h2>Skills</h2>
+        </div>
+        <div class="section-content">
+          <ul class="list-unstyled">
+            <li><em>Programming language</em>: C++, PL/pgSQL, PL/SQL, SQL, JavaScript,  HTML/CSS, Java, Perl</li>
+            <li><em>Development environment</em>: Qt Creator, MS Visual C++, VS code, pgAdmin, Toad for Oracle, Eclipse</li>
+            <li><em>DBMS</em>: PostgreSQL, Oracle, MySQL</li>
+            <li><em>Version control system</em>: Mercurial, Perforce, Git</li>
+            <li><em>Bug tracking system</em>: Mantis</li>
+          </ul>
+        </div>
+        <div class="clear"></div>
+        </section>
+
+        <section>
+          <div class="section-title">
+            <h2>Languages</h2>
+          </div>
+          <div class="section-content">
+            <ul class="list-unstyled">
+              <li><em>English</em>: Pre-Intermediate</li>
+              <li><em>Italian</em>: Basic</li>
+            </ul>
+          </div>
+          <div class="clear"></div>
+        </section>
+
+        <section>
+            <div class="section-title">
+              <h2>Professional experience</h2>
+            </div>
+            <div class="section-content">
+              <article class="experience">
+                <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h3>
+                <p class="period">May-August 2018</p>
+                <p>Parsing messages in METAR, TAF format.<br>
+                  Разработка оконного приложения по заполнению данных о метеоусловиях.
+                </p>
+              </article>
+              <article class="experience">
+                <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h3>
+                <p class="period">January 2016-April 2018</p>
+                <p>Разработка оконного приложения по заполнению данных о метеоусловиях.<br>
+                  Разработка оконного приложения по заполнению абонентов для обмена оперативно-тактической информацией.<br>
+                  Разработка оконного приложения по заполнению данных о предельных значениях измерений.<br>
+                  Разработка оконного приложения по заполнению данных о боеприпасах.
+                </p>
+              </article>
+              <article class="experience">
+                <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h3>
+                <p class="period">November 2015-January 2016</p>
+                <p>Разработка оконного приложения по заполнению абонентов для обмена оперативно-тактической информацией.</p>
+              </article>
+              <article class="experience">
+                  <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h3>
+                  <p class="period">September 2015-October 2015</p>
+                  <p>Writing part of the project documentation. Writing reports for demonstration.</p>
+                </article>
+            </div>
+            <div class="clear"></div>
+          </section>
+          
+          <section>
+              <div class="section-title">
+                <h2>Interests</h2>
+              </div>
+              <div class="section-content">
+                <p>Outdoor activity, journeys, reading(sci-fi, fantasy, psychology), watching films(sci-fi, thrillers), listening to music.</p>
+              </div>
+              <div class="clear"></div>
+            </section>        
+
+      </div>
     </div>
+
   </body>
 </html>
