feat: add summary and footer

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       </div>
 
     <div class="main-inf">
+      <section>
+        <h2>Summary</h2>
+        <p>Занималась разработкой графических интерфейсов, позволяющих добавлять, изменять, удалять информацию о сущностях системы.
+          Реализовывала функции по добавлению, изменению, удалению записей в/из БД, представления, правила и триггеры.
+          Now I take courses in the Rolling Scopes School because I want to try myself in web development.</p>
+      </section>
 
       <section>
         <div class="section-title">
@@ -114,6 +120,8 @@
             </section>        
 
       </div>
+      <footer>
+      </footer>
     </div>
 
   </body>
