--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="wrapper">
       <div class=contact-inf>
-        <div class="photo">
-          <img src="image/notMyPhoto.jpg" alt="Malash Iryna">
+        <div>
+          <img src="image/notMyPhoto.jpg" alt="Malash Iryna" width="150" height="150">
         </div>
         <div class="name">
           <h1>Malash Iryna</h1>
@@ -27,10 +27,10 @@
 
     <div class="main-inf">
       <section>
-        <h2>Summary</h2>
-        <p>Занималась разработкой графических интерфейсов, позволяющих добавлять, изменять, удалять информацию о сущностях системы.
-          Реализовывала функции по добавлению, изменению, удалению записей в/из БД, представления, правила и триггеры.
-          Now I take courses in the Rolling Scopes School because I want to try myself in web development.</p>
+        <h2>Summary:</h2>
+        <p>I was engaged in the development of GUI applications for adding, updating and deleting information about the elements of the system.
+          Implemented functions for adding, modifying, deleting records to/from the database, views, rules and triggers.
+          I want to try myself in the web development. Now I take courses in the <a href="https://school.rollingscopes.com/" target="_blank">Rolling Scopes School</a>.</p>
       </section>
 
       <section>
@@ -75,54 +75,60 @@
         </section>
 
         <section>
-            <div class="section-title">
-              <h2>Professional experience</h2>
-            </div>
-            <div class="section-content">
-              <article class="experience">
-                <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h3>
-                <p class="period">May-August 2018</p>
-                <p>Parsing messages in METAR, TAF format.<br>
-                  Разработка оконного приложения по заполнению данных о метеоусловиях.
-                </p>
-              </article>
-              <article class="experience">
-                <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h3>
-                <p class="period">January 2016-April 2018</p>
-                <p>Разработка оконного приложения по заполнению данных о метеоусловиях.<br>
-                  Разработка оконного приложения по заполнению абонентов для обмена оперативно-тактической информацией.<br>
-                  Разработка оконного приложения по заполнению данных о предельных значениях измерений.<br>
-                  Разработка оконного приложения по заполнению данных о боеприпасах.
-                </p>
-              </article>
-              <article class="experience">
-                <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h3>
-                <p class="period">November 2015-January 2016</p>
-                <p>Разработка оконного приложения по заполнению абонентов для обмена оперативно-тактической информацией.</p>
-              </article>
-              <article class="experience">
-                  <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h3>
-                  <p class="period">September 2015-October 2015</p>
-                  <p>Writing part of the project documentation. Writing reports for demonstration.</p>
-                </article>
-            </div>
-            <div class="clear"></div>
-          </section>
+          <div class="section-title">
+            <h2>Professional experience</h2>
+          </div>
+          <div class="section-content">
+            <article class="experience">
+              <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h4>
+              <p class="period">May - August 2018</p>
+              <p>Development of parser for METAR and TAF formatted messages.<br>
+                Development of GUI application for input meteo data.</p>
+            </article>
+            <article class="experience">
+              <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h4>
+              <p class="period">January 2016 - April 2018</p>
+              <p>Development of GUI application for input meteo data.<br>
+                Development of GUI application for input abonents data for the exchange of operational and tactical information.<br>
+                Development of GUI application for input measurement limits.<br>
+                Development of GUI application for input ammunition data.</p>
+            </article>
+            <article class="experience">
+              <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h4>
+              <p class="period">November 2015 -  January 2016</p>
+              <p>Development of GUI application for input abonents data for the exchange of operational and tactical information.</p>
+            </article>
+            <article class="experience">
+              <h4>OJSC «AGAT – Control Systems» – Managing Company of «Geoinformation Control Systems Holding»</h4>
+              <p class="period">September 2015 - October 2015</p>
+              <p>Participating in development of the project documentation. <br>
+                Development of reports for demonstration.</p>
+            </article>
+            <article class="experience">
+              <h4>The Rolling Scopes School</h4>
+              <p class="period">September 2018 - Present</p>
+              <p><a href="https://github.com/f8B23Lef" target="_blank">https://github.com/f8B23Lef</a></p>
+              <p><a href="https://www.codecademy.com/users/leonovairina128/achievements" target="_blank">https://www.codecademy.com/users/leonovairina128/achievements</a></p>
+            </article>
+          </div>
+          <div class="clear"></div>
+        </section>
           
-          <section>
-              <div class="section-title">
-                <h2>Interests</h2>
-              </div>
-              <div class="section-content">
-                <p>Outdoor activity, journeys, reading(sci-fi, fantasy, psychology), watching films(sci-fi, thrillers), listening to music.</p>
-              </div>
-              <div class="clear"></div>
-            </section>        
+        <section>
+          <div class="section-title">
+            <h2>Interests</h2>
+          </div>
+          <div class="section-content">
+            <p>Sport activities, journeys, books(sci-fi, fantasy, psychology), films(sci-fi, thrillers), music.</p>
+          </div>
+          <div class="clear"></div>
+        </section>        
 
       </div>
+
       <footer>
       </footer>
-    </div>
 
+    </div>
   </body>
 </html>
